Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
     }
    ],
    "source": [
-    "countries.pop() # add code here"
+    "countries.append() # add code here"
    ]
   },
   {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -336,11 +336,10 @@
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
-       " 'Canada',\n",
-       " 'Thailand']"
+       " 'Canada']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
