--- a/index.ipynb
+++ b/index.ipynb
@@ -293,11 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Malta') # add code here"
+    "countries.append('Thailand') # add code here"
    ]
   },
   {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -325,10 +325,13 @@
        " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
-       " 'Canada']"
+       " 'Canada',\n",
+       " 'South Korean',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
