--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -397,12 +397,12 @@
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
-       " 'South Korea',\n",
+       " 'South Korean',\n",
        " 'Malta',\n",
        " 'Thailand']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
